# hardware

./: .gitmodules  README.md  gokart.repos
src/control_converter/: CMakeLists.txt  package.xml
src/control_converter/include/control_converter/: control_converter_node.hpp
src/control_converter/src/: control_converter_node.cpp
src/gokart_hardware_launches/: CMakeLists.txt  package.xml
src/gokart_hardware_launches/launch/: gokart_hardware_launch.launch.py  gokart_hardware_launch_with_manual_control.launch.py  gokart_sensor_bringup.launch.py  lidar.launch.py  zed.launch.py
src/gokart_localization/: CMakeLists.txt  package.xml
src/gokart_localization/config/: default_config.yaml
src/gokart_localization/launch/: gokart_localization.launch.py
src/gokart_status_monitor/: CMakeLists.txt  package.xml
src/gokart_status_monitor/src/: gokart_status_monitor_node.cpp
src/manual_controller/: package.xml  setup.cfg  setup.py
src/manual_controller/launch/: manual_control.launch.py
src/manual_controller/manual_controller/: manual_controller_node.py
src/pid_control_converter/: CMakeLists.txt  package.xml
src/pid_control_converter/include/pid_control_converter/: pid_control_converter_node.hpp
src/pid_control_converter/src/: pid_control_converter_node.cpp
src/roar_msgs/: CMakeLists.txt  package.xml
src/roar_msgs/msg/: VehicleStatus.msg
